--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "@types/react-lazyload": "^3.2.0",
     "autoprefixer": "10.4.15",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
@@ -26,7 +27,7 @@
     "react-icons": "^4.10.1",
     "react-lazyload": "^3.2.0",
     "react-toastify": "^9.1.3",
-    "swiper": "^10.1.0",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
